# cpp-template

./: .gitignore  LICENSE
proj.android/: settings.gradle
proj.android/app/: build.gradle
proj.android/app/src/androidTest/java/com/fornity/template/: ExampleInstrumentedTest.java
proj.android/app/src/main/: AndroidManifest.xml
proj.android/app/src/main/cpp/: CMakeLists.txt
proj.android/app/src/main/java/com/fornity/template/: MainActivity.java
proj.android/app/src/main/res/values/: strings.xml
proj.android/app/src/test/java/com/fornity/template/: ExampleUnitTest.java
proj.android/gradle/wrapper/: gradle-wrapper.properties
src/: Config.h  Realm.cc  Realm.h
src/framework/: App.cc  App.h  Types.h
src/framework/assets/: ResourceManager.cc  ResourceManager.h
src/framework/modules/: Renderer.cc  Renderer.h
src/framework/utils/: Log.cc  Log.h
